force-app/main/default/objects/Tracker_Event__e/Tracker_Event__e.object-meta.xml
<CustomObject>
    <description>Events generated from a solar panel track.</description>
    <label>Tracker Event</label>
    <pluralLabel>Tracker Events</pluralLabel>
</CustomObject>