force-app/main/default/objects/Tracker_Event__e/fields/error_code__c.field-meta.xml
<CustomField>
    <fullName>error_code__c</fullName>
    <description>Error codes generated by the solar panel track.</description>
    <label>error code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>