force-app/main/default/objects/Tracker_Event__e/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <description>Model of the tracker.</description>
    <label>model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>