force-app/main/default/objects/Tracker_Event__e/fields/power_output__c.field-meta.xml
<CustomField>
    <fullName>power_output__c</fullName>
    <description>Output of all the panels in the track combined.</description>
    <label>power output</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>