force-app/main/default/objects/Tracker_Event__e/fields/rotation_x__c.field-meta.xml
<CustomField>
    <fullName>rotation_x__c</fullName>
    <description>The x-axis rotation of the entire track of panels.</description>
    <label>rotation x</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>