force-app/main/default/objects/Tracker_Event__e/fields/rotation_z__c.field-meta.xml
<CustomField>
    <fullName>rotation_z__c</fullName>
    <description>The z-axis rotation of the entire track of panels.</description>
    <label>rotation z</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>